--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         </h3>
         <div class="main_butt">
           <button class="buynow button_style" type="button">Buy now</button>
-          <a class="howmade button_style" href="#howtomade">How it’s made</a>
+          <a class="howmade button_style" href="#howtomade">How it's made</a>
         </div>
         <p class="main_scroll">scroll down</p>
         <a class="main_scroll-cont" href="#footer" aria-label="Scroll down">
