--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Studio</title>
+    <title>Simply Chocolate</title>
     <meta name="description" content="Goit-markup-hw-07" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -103,18 +103,23 @@
       <div class="main-bg">
         <h1 class="visually-hidden">Greet chocolate</h1>
         <h3 class="main_text">
-          Treat yourself or a loved one to our finest ingredients for a moment of pure delight!
+          Treat yourself or a loved one to <span class="break"><br /></span>our finest ingredients
+          for a moment of pure delight!
         </h3>
-        <div class="main_butt">
-          <button class="buynow button_style" type="button">Buy now</button>
-          <a class="howmade button_style" href="#howtomade">How it's made</a>
-        </div>
-        <p class="main_scroll">scroll down</p>
-        <a class="main_scroll-cont" href="#footer" aria-label="Scroll down">
-          <svg class="main_scroll-icon" aria-label="Scroll">
-            <use href="./images/spraite.svg#icon-scroll"></use>
-          </svg>
-        </a>
+        <ul class="main-button">
+          <li class="main_butt">
+            <button class="buynow button_style" type="button">Buy now</button>
+            <a class="howmade button_style" href="#howtomade">How it's made</a>
+          </li>
+          <li class="scroll">
+            <p class="main_scroll">scroll down</p>
+            <a class="main_scroll-cont" href="#footer" aria-label="Scroll down">
+              <svg class="main_scroll-icon" aria-label="Scroll">
+                <use href="./images/spraite.svg#icon-scroll"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
       </div>
     </section>
     <section class="about container">
