--- a/index.html
+++ b/index.html
@@ -281,6 +281,146 @@
       <section class="ourproducts" id="ourproducts">
         <div class="container">
           <h2 class="ourprod_title">OUR <span class="orange_text">PRODUCTS</span></h2>
+          <ul class="ourproducts-item-box">
+            <li>
+              <div class="ourproducts-item">
+                <img
+                  class="ourproducts-item-img"
+                  srcset="./images/choco/choco1.jpg 1x, ./images/choco/choco1@2x.jpg 2x"
+                  src="./images/choco/choco1.jpg"
+                  alt="Orange"
+                  loading="lazy"
+                  width="230px"
+                  height="201px"
+                />
+                <h4 class="ourproducts-item-type">Orange</h4>
+                <p class="ourproducts-item-about">Dark chocolate</p>
+                <div class="ourproducts-item-price">45 UAH</div>
+              </div>
+            </li>
+            <li>
+              <div class="ourproducts-item">
+                <img
+                  class="ourproducts-item-img"
+                  srcset="./images/choco/choco2.jpg 1x, ./images/choco/choco2@2x.jpg 2x"
+                  src="./images/choco/choco2.jpg"
+                  alt="APPLE&CRANBERRY"
+                  loading="lazy"
+                  width="230px"
+                  height="201px"
+                />
+                <h4 class="ourproducts-item-type">APPLE&CRANBERRY</h4>
+                <p class="ourproducts-item-about">Milk chocolate</p>
+                <div class="ourproducts-item-price">50 UAH</div>
+              </div>
+            </li>
+            <li>
+              <div class="ourproducts-item">
+                <img
+                  class="ourproducts-item-img"
+                  srcset="./images/choco/choco3.jpg 1x, ./images/choco/choco3@2x.jpg 2x"
+                  src="./images/choco/choco3.jpg"
+                  alt="Lime&sea salt"
+                  loading="lazy"
+                  width="230px"
+                  height="201px"
+                />
+                <h4 class="ourproducts-item-type">Lime&sea salt</h4>
+                <p class="ourproducts-item-about">Dark chocolate</p>
+                <div class="ourproducts-item-price">66 UAH</div>
+              </div>
+            </li>
+            <li>
+              <div class="ourproducts-item">
+                <img
+                  class="ourproducts-item-img"
+                  srcset="./images/choco/choco4.jpg 1x, ./images/choco/choco4@2x.jpg 2x"
+                  src="./images/choco/choco4.jpg"
+                  alt="Pineapple"
+                  loading="lazy"
+                  width="230px"
+                  height="201px"
+                />
+                <h4 class="ourproducts-item-type">Pineapple</h4>
+                <p class="ourproducts-item-about">Dark chocolate</p>
+                <div class="ourproducts-item-price">54 UAH</div>
+              </div>
+            </li>
+            <li>
+              <div class="ourproducts-item">
+                <img
+                  class="ourproducts-item-img"
+                  srcset="./images/choco/choco5.jpg 1x, ./images/choco/choco5@2x.jpg 2x"
+                  src="./images/choco/choco5.jpg"
+                  alt="Classic"
+                  loading="lazy"
+                  width="230px"
+                  height="201px"
+                />
+                <h4 class="ourproducts-item-type">Classic</h4>
+                <p class="ourproducts-item-about">Milk chocolate</p>
+                <div class="ourproducts-item-price">45 UAH</div>
+              </div>
+            </li>
+            <li>
+              <div class="ourproducts-item">
+                <img
+                  class="ourproducts-item-img"
+                  srcset="./images/choco/choco6.jpg 1x, ./images/choco/choco6@2x.jpg 2x"
+                  src="./images/choco/choco6.jpg"
+                  alt="Honey"
+                  loading="lazy"
+                  width="230px"
+                  height="201px"
+                />
+                <h4 class="ourproducts-item-type">Honey</h4>
+                <p class="ourproducts-item-about">Milk chocolate</p>
+                <div class="ourproducts-item-price">50 UAH</div>
+              </div>
+            </li>
+            <li>
+              <div class="ourproducts-item">
+                <img
+                  class="ourproducts-item-img"
+                  srcset="./images/choco/choco7.jpg 1x, ./images/choco/choco7@2x.jpg 2x"
+                  src="./images/choco/choco7.jpg"
+                  alt="Roasted fruits"
+                  loading="lazy"
+                  width="230px"
+                  height="201px"
+                />
+                <h4 class="ourproducts-item-type">Roasted fruits</h4>
+                <p class="ourproducts-item-about">Dark chocolate</p>
+                <div class="ourproducts-item-price">66 UAH</div>
+              </div>
+            </li>
+            <li>
+              <div class="ourproducts-item">
+                <img
+                  class="ourproducts-item-img"
+                  srcset="./images/choco/choco8.jpg 1x, ./images/choco/choco8@2x.jpg 2x"
+                  src="./images/choco/choco8.jpg"
+                  alt="Classic"
+                  loading="lazy"
+                  width="230px"
+                  height="201px"
+                />
+                <h4 class="ourproducts-item-type">Classic</h4>
+                <p class="ourproducts-item-about">White chocolate</p>
+                <div class="ourproducts-item-price">54 UAH</div>
+              </div>
+            </li>
+          </ul>
+          <ul class="ourproducts-item-check">
+            <li class="ourproducts-item-check-item active"></li>
+            <li class="ourproducts-item-check-item"></li>
+            <li class="ourproducts-item-check-item"></li>
+            <li class="ourproducts-item-check-item"></li>
+            <li class="ourproducts-item-check-item"></li>
+            <li class="ourproducts-item-check-item"></li>
+            <li class="ourproducts-item-check-item"></li>
+            <li class="ourproducts-item-check-item"></li>
+          </ul>
         </div>
       </section>
       <section class="topsellers" id="topsellers">
@@ -432,7 +572,7 @@
     <div id="buynow" class="modal">
       <div class="window-buynow">
         <button class="close" type="button" data-modal-close aria-label="Close">
-          <svg class="icon-modal" width="12px" height="12px">
+          <svg class="icon-modal">
             <use href="./images/spraite.svg#icon-x-close"></use>
           </svg>
         </button>
@@ -445,7 +585,7 @@
     <div id="review" class="modal">
       <div class="window-review">
         <button class="close" type="button" data-modal-close aria-label="Close">
-          <svg class="icon-modal" width="12px" height="12px">
+          <svg class="icon-modal">
             <use href="./images/spraite.svg#icon-x-close"></use>
           </svg>
         </button>
@@ -503,7 +643,7 @@
     <div id="subs" class="modal">
       <div class="window-subs">
         <button class="close" type="button" data-modal-close aria-label="Close">
-          <svg class="icon-modal" width="12px" height="12px">
+          <svg class="icon-modal">
             <use href="./images/spraite.svg#icon-x-close"></use>
           </svg>
         </button>
@@ -560,5 +700,6 @@
     ></script>
     <script src="./js/modal.js"></script>
     <script src="./js/mobile-menu.js"></script>
+    <script src="./js/sweeper.js"></script>
   </body>
 </html>
