--- a/index.html
+++ b/index.html
@@ -498,52 +498,56 @@
       </section>
     </main>
     <footer class="footer container" id="footer">
-      <h2 class="footer_text">
-        <span class="orange_text">Chocolate</span> a delicious cure for a bad day
-      </h2>
-      <div class="footer_contact_block">
-        <h4 class="footer_contact">Contact us</h4>
-
-        <ul class="icon_block">
-          <li class="social-link">
-            <a
-              class="link"
-              href=""
-              target="_blank"
-              rel="noopener no-refferrer"
-              aria-label="Instagram"
-            >
-              <svg width="22px" height="22px" aria-label="Instagram">
-                <use href="./images/spraite.svg#icon-instagram"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="social-link">
-            <a
-              class="link"
-              href=""
-              target="_blank"
-              rel="noopener no-refferrer"
-              aria-label="Twitter"
-            >
-              <svg width="22" height="22" aria-label="Twitter">
-                <use href="./images/spraite.svg#icon-twitter"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
+      <div class="footer_info">
+        <h2 class="footer_text">
+          <span class="orange_text">Chocolate</span> a delicious cure for a bad day
+        </h2>
+        <div class="footer_contact_sect">
+          <div class="footer_contact_block">
+            <h4 class="footer_contact">Contact us</h4>
+            <ul class="icon_block">
+              <li class="social-link">
+                <a
+                  class="link"
+                  href=""
+                  target="_blank"
+                  rel="noopener no-refferrer"
+                  aria-label="Instagram"
+                >
+                  <svg width="22px" height="22px" aria-label="Instagram">
+                    <use href="./images/spraite.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-link">
+                <a
+                  class="link"
+                  href=""
+                  target="_blank"
+                  rel="noopener no-refferrer"
+                  aria-label="Twitter"
+                >
+                  <svg width="22" height="22" aria-label="Twitter">
+                    <use href="./images/spraite.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+          <!-- Контакт -->
+          <address class="address">
+            <ul class="list nav-menu">
+              <li class="tel">
+                <a class="link contact" href="tel:+380684439426">+380 (68) 443-94-26</a>
+              </li>
+              <li class="email">
+                <a class="link contact" href="mailto:simplychoc@gmail.com">simplychoc@gmail.com</a>
+              </li>
+            </ul>
+          </address>
+        </div>
       </div>
-      <!-- Контакт -->
-      <address class="address">
-        <ul class="list nav-menu">
-          <li class="tel">
-            <a class="link contact" href="tel:+380684439426">+380 (68) 443-94-26</a>
-          </li>
-          <li class="email">
-            <a class="link contact" href="mailto:simplychoc@gmail.com">simplychoc@gmail.com</a>
-          </li>
-        </ul>
-      </address>
+
       <nav class="footer_nav_menu">
         <ul class="footer_menu">
           <li>
@@ -569,14 +573,126 @@
       </nav>
     </footer>
     <!-- Модальные окна -->
-    <div id="buynow" class="modal">
+    <div id="buynow" class="modal is-open">
       <div class="window-buynow">
-        <button class="close" type="button" data-modal-close aria-label="Close">
+        <button class="close" type="button" aria-label="Close">
           <svg class="icon-modal">
             <use href="./images/spraite.svg#icon-x-close"></use>
           </svg>
         </button>
-        <h2>buynow</h2>
+        <h2 class="buynow-title-text"><span class="orange_text">BUY</span> NOW</h2>
+        <ul class="buynow-goods">
+          <li class="buynow-goods-items">
+            <picture>
+              <source srcset="./images/mobile/choco1.png" media="(max-width: 767px)" />
+              <source srcset="./images/tablet/choco1.png" media="(min-width: 768px)" />
+              <img
+                class="buy_img"
+                src="./images/tablet/choco1.png"
+                alt="Chocolate 1"
+                loading="lazy"
+              />
+            </picture>
+            <div class="buynow-goods-weight">100 g</div>
+          </li>
+          <li class="buynow-goods-items">
+            <picture>
+              <source srcset="./images/mobile/choco2.png" media="(max-width: 767px)" />
+              <source srcset="./images/tablet/choco2.png" media="(min-width: 768px)" />
+              <img
+                class="buy_img"
+                src="./images/tablet/choco2.png"
+                alt="Chocolate 2"
+                loading="lazy"
+              />
+            </picture>
+            <div class="buynow-goods-weight">200 g</div>
+          </li>
+          <li class="buynow-goods-items">
+            <picture>
+              <source srcset="./images/mobile/choco3.png" media="(max-width: 767px)" />
+              <source srcset="./images/tablet/choco3.png" media="(min-width: 768px)" />
+              <img
+                class="buy_img"
+                src="./images/tablet/choco3.png"
+                alt="Chocolate 3"
+                loading="lazy"
+              />
+            </picture>
+            <div class="buynow-goods-weight">300 g</div>
+          </li>
+        </ul>
+
+        <form class="review-form" method="post" autocomplete="on">
+          <label for="name">
+            <input class="review-form-item" type="text" id="name" name="name" placeholder="Name" />
+          </label>
+          <label for="Surname">
+            <input
+              class="review-form-item"
+              type="text"
+              id="surname"
+              name="surname"
+              placeholder="Surname"
+            />
+          </label>
+          <label for="email">
+            <input
+              class="review-form-item"
+              type="email"
+              id="email"
+              name="email"
+              placeholder="Enter your email"
+              pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}"
+              required
+              title="Please correct email"
+            />
+          </label>
+          <label for="phone" style="position: relative">
+            <div class="phone-prefix">
+              <svg class="icon-modal" width="24px" height="18px">
+                <use href="./images/spraite.svg#icon-flag"></use>
+              </svg>
+              <span class="phone-text">+380</span>
+            </div>
+            <input
+              class="review-form-item"
+              type="tel"
+              id="phone"
+              name="phone"
+              placeholder="Phone number"
+              pattern="[1-9]{9}"
+              required
+              title="Please correct phone"
+            />
+          </label>
+          <label for="phone" style="position: relative">
+            <div class="phone-prefix">
+              <svg class="icon-modal" width="32px" height="21px">
+                <use href="./images/spraite.svg#icon-mastercard"></use>
+              </svg>
+            </div>
+            <input
+              class="review-form-item"
+              type="tel"
+              id="phone"
+              name="phone"
+              placeholder="Phone number"
+              pattern="[1-9]{9}"
+              required
+              title="Please correct phone"
+            />
+          </label>
+          <textarea
+            class="review-form-item-text"
+            type="text"
+            id="text"
+            name="text"
+            rows="1"
+            placeholder="Enter text"
+          ></textarea>
+        </form>
+
         <button class="buynow-button" type="button" aria-label="Submit" id="Submit">Submit</button>
       </div>
       <div id="overlay-buynow_w" class="overlay"></div>
@@ -584,7 +700,7 @@
 
     <div id="review" class="modal">
       <div class="window-review">
-        <button class="close" type="button" data-modal-close aria-label="Close">
+        <button class="close" type="button" aria-label="Close">
           <svg class="icon-modal">
             <use href="./images/spraite.svg#icon-x-close"></use>
           </svg>
@@ -642,7 +758,7 @@
     </div>
     <div id="subs" class="modal">
       <div class="window-subs">
-        <button class="close" type="button" data-modal-close aria-label="Close">
+        <button class="close" type="button" aria-label="Close">
           <svg class="icon-modal">
             <use href="./images/spraite.svg#icon-x-close"></use>
           </svg>
