--- a/index.html
+++ b/index.html
@@ -237,7 +237,17 @@
         <div class="">
           <h2 class="howtomade_title">HOW IT'S <span class="orange_text">MADE?</span></h2>
           <div class="howtomade_content">
-            <div class="howtomade_img"></div>
+            <div class="howtomade_img">
+              <iframe
+                width="100%"
+                height="100%"
+                src="https://www.youtube.com/embed/xPe1jMuX32s"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen
+              ></iframe>
+            </div>
             <div class="howtomade">
               <h3 class="howtomade_main">
                 Try our chocolates today and <span class="break"><br /></span>discover the perfect
