--- a/index.html
+++ b/index.html
@@ -179,56 +179,116 @@
           </p>
           <ul class="ing_list">
             <li class="ing_list_item">
-              <picture>
-                <source srcset="./images/mobile/ing_1.png" media="(max-width: 1199px)" />
-                <source srcset="./images/desktop/ing_1.png" media="(min-width: 1200px)" />
-                <img
-                  class="ing_img"
-                  src="./images/desktop/ing_1.png"
-                  alt="Ingradient 1"
-                  loading="lazy"
-                />
-              </picture>
-              <p class="ing_img_text white">MILK CHOCOLATE</p>
+              <div class="ing_list_item-main">
+                <picture>
+                  <source srcset="./images/mobile/ing_1.png" media="(max-width: 1199px)" />
+                  <source srcset="./images/desktop/ing_1.png" media="(min-width: 1200px)" />
+                  <img
+                    class="ing_img"
+                    src="./images/desktop/ing_1.png"
+                    alt="Ingradient 1"
+                    loading="lazy"
+                  />
+                </picture>
+                <p class="ing_img_text white">MILK CHOCOLATE</p>
+              </div>
+              <div class="ing_list_item-about">
+                <h4 class="ing_list_item-about-title">Milk Chocolate</h4>
+                <ul class="ing_list_item-about-buttons">
+                  <li class="ing_list_item-about-button">chocolate</li>
+                  <li class="ing_list_item-about-button">the benefits</li>
+                </ul>
+                <p class="ing_list_item-about-text">
+                  Milk chocolate is a solid chocolate confectionery containing cocoa, sugar and
+                  milk. It is the most consumed type of chocolate. Chocolate was originally sold and
+                  consumed as a beverage in pre-Columbian times. Although four-fifths of all milk
+                  chocolate is sold in the United States and Europe.
+                </p>
+              </div>
             </li>
             <li class="ing_list_item">
-              <picture>
-                <source srcset="./images/mobile/ing_2.png" media="(max-width: 1199px)" />
-                <source srcset="./images/desktop/ing_2.png" media="(min-width: 1200px)" />
-                <img
-                  class="ing_img"
-                  src="./images/desktop/ing_2.png"
-                  alt="Ingradient 2"
-                  loading="lazy"
-                />
-              </picture>
-              <p class="ing_img_text">MILK</p>
+              <div class="ing_list_item-main">
+                <picture>
+                  <source srcset="./images/mobile/ing_2.png" media="(max-width: 1199px)" />
+                  <source srcset="./images/desktop/ing_2.png" media="(min-width: 1200px)" />
+                  <img
+                    class="ing_img"
+                    src="./images/desktop/ing_2.png"
+                    alt="Ingradient 2"
+                    loading="lazy"
+                  />
+                </picture>
+                <p class="ing_img_text">MILK</p>
+              </div>
+              <div class="ing_list_item-about">
+                <h4 class="ing_list_item-about-title">Milk</h4>
+                <ul class="ing_list_item-about-buttons">
+                  <li class="ing_list_item-about-button">Milk</li>
+                  <li class="ing_list_item-about-button">the benefits</li>
+                </ul>
+                <p class="ing_list_item-about-text">
+                  Milk is a white liquid food produced by the mammary glands of mammals. It is the
+                  primary source of nutrition for young mammals (including breastfed human infants)
+                  before they are able to digest solid food.Early-lactation milk, which is called
+                  colostrum, contains antibodies that strengthen the immune system.
+                </p>
+              </div>
             </li>
             <li class="ing_list_item">
-              <picture>
-                <source srcset="./images/mobile/ing_3.png" media="(max-width: 1199px)" />
-                <source srcset="./images/desktop/ing_3.png" media="(min-width: 1200px)" />
-                <img
-                  class="ing_img"
-                  src="./images/desktop/ing_3.png"
-                  alt="Ingradient 3"
-                  loading="lazy"
-                />
-              </picture>
-              <p class="ing_img_text white">NUTS</p>
+              <div class="ing_list_item-main">
+                <picture>
+                  <source srcset="./images/mobile/ing_3.png" media="(max-width: 1199px)" />
+                  <source srcset="./images/desktop/ing_3.png" media="(min-width: 1200px)" />
+                  <img
+                    class="ing_img"
+                    src="./images/desktop/ing_3.png"
+                    alt="Ingradient 3"
+                    loading="lazy"
+                  />
+                </picture>
+                <p class="ing_img_text white">NUTS</p>
+              </div>
+              <div class="ing_list_item-about">
+                <h4 class="ing_list_item-about-title">Nuts</h4>
+                <ul class="ing_list_item-about-buttons">
+                  <li class="ing_list_item-about-button">nuts</li>
+                  <li class="ing_list_item-about-button">the benefits</li>
+                </ul>
+                <p class="ing_list_item-about-text">
+                  Almonds, pistachios, and walnuts are some types of nuts that contain healthy
+                  nutrients. When eaten as part of a nutrient-dense diet, these 9 nuts may offer
+                  benefits such as reducing your risk of heart disease. They’re a good source of
+                  fiber, healthy fats, and plant protein. Plus, they’re great on their own.
+                </p>
+              </div>
             </li>
             <li class="ing_list_item">
-              <picture>
-                <source srcset="./images/mobile/ing_4.png" media="(max-width: 1199px)" />
-                <source srcset="./images/desktop/ing_4.png" media="(min-width: 1200px)" />
-                <img
-                  class="ing_img"
-                  src="./images/desktop/ing_4.png"
-                  alt="Ingradient 4"
-                  loading="lazy"
-                />
-              </picture>
-              <p class="ing_img_text">SEMI - SWEET CHOCOLATE</p>
+              <div class="ing_list_item-main">
+                <picture>
+                  <source srcset="./images/mobile/ing_4.png" media="(max-width: 1199px)" />
+                  <source srcset="./images/desktop/ing_4.png" media="(min-width: 1200px)" />
+                  <img
+                    class="ing_img"
+                    src="./images/desktop/ing_4.png"
+                    alt="Ingradient 4"
+                    loading="lazy"
+                  />
+                </picture>
+                <p class="ing_img_text">SEMI - SWEET CHOCOLATE</p>
+              </div>
+              <div class="ing_list_item-about">
+                <h4 class="ing_list_item-about-title">Semi - sweet chocolate</h4>
+                <ul class="ing_list_item-about-buttons">
+                  <li class="ing_list_item-about-button">sweet chocolate</li>
+                  <li class="ing_list_item-about-button">the benefits</li>
+                </ul>
+                <p class="ing_list_item-about-text">
+                  Semi-sweet chocolate has a cocoa solid content of 35 to 65%. One of the best ways
+                  to gain an understanding of this type of chocolate is to compare it to a different
+                  type of chocolate. Semisweet is darker than milk chocolate. In a taste comparison,
+                  it has a slightly bitter taste whereas milk chocolate is sweeter and more mellow.
+                </p>
+              </div>
             </li>
           </ul>
         </div>
