scroll_block/hover

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
               <button class="buynow button_style" type="button" id="open-buynow1">Buy now</button>
               <a class="howmade button_style" href="#howtomade">How it's made</a>
             </li>
-            <li class="scroll">
+            <li class="main-scroll-block">
               <p class="main_scroll">scroll down</p>
               <a class="main_scroll-cont" href="#footer" aria-label="Scroll down">
                 <svg class="main_scroll-icon" aria-label="Scroll">
