fix-modal-animation

--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
           <h2 class="howtomade_title">HOW IT'S <span class="orange_text">MADE?</span></h2>
           <div class="howtomade_content">
             <div class="howtomade_img">
-              <iframe
+              <!-- <iframe
                 width="100%"
                 height="100%"
                 src="https://www.youtube.com/embed/xPe1jMuX32s"
@@ -306,7 +306,7 @@
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 allowfullscreen
-              ></iframe>
+              ></iframe> -->
             </div>
             <div class="howtomade">
               <h3 class="howtomade_main">
@@ -580,10 +580,10 @@
                   width="80"
                   height="80"
                 />
-                <h4 class="feedback-item-name">Victoria Dobrzhanska</h4>
+                <h4 class="feedback-item-name">Nazar Babenko</h4>
                 <p class="feedback-item-feed">
-                  I love this chocolate bar. Perfect combination of light crispy wafer, covered in a
-                  thin layer chocolate.
+                  This chocolate confection is a delight! A delight! The wafer is light and crisp,
+                  the hazelnut cream is smooth, and the chocolate is good.
                 </p>
               </div>
             </l1>
@@ -598,10 +598,10 @@
                   width="80"
                   height="80"
                 />
-                <h4 class="feedback-item-name">Victoria Dobrzhanska</h4>
+                <h4 class="feedback-item-name">Olena Kampusch</h4>
                 <p class="feedback-item-feed">
-                  I love this chocolate bar. Perfect combination of light crispy wafer, covered in a
-                  thin layer chocolate.
+                  Chocolate is a family favourite treat. Love the delicious smooth chocolate and the
+                  creaminess inside. The wafer is soft but crunchy.
                 </p>
               </div></l1
             >
