--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
           <h2 class="howtomade_title">HOW IT'S <span class="orange_text">MADE?</span></h2>
           <div class="howtomade_content">
             <div class="howtomade_img">
-              <!-- <iframe
+              <iframe
                 width="100%"
                 height="100%"
                 src="https://www.youtube.com/embed/xPe1jMuX32s"
@@ -306,7 +306,8 @@
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 allowfullscreen
-              ></iframe> -->
+                loading="lazy"
+              ></iframe>
             </div>
             <div class="howtomade">
               <h3 class="howtomade_main">
