--- a/index.html
+++ b/index.html
@@ -299,12 +299,11 @@
           <div class="howtomade_content">
             <div class="howtomade_img">
               <iframe
-                width="100%"
-                height="100%"
-                src="https://www.youtube.com/embed/xPe1jMuX32s"
-                title="YouTube video player"
+                src="https://player.vimeo.com/video/367372355?h=75f5fbefaa&color=ffffff&portrait=0"
+                width="640"
+                height="360"
                 frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allow="autoplay; fullscreen; picture-in-picture"
                 allowfullscreen
                 loading="lazy"
               ></iframe>
