--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
           <div class="howtomade_content">
             <div class="howtomade_img">
               <iframe
-                src="https://player.vimeo.com/video/367372355?h=75f5fbefaa&color=ffffff&portrait=0"
+                src="https://player.vimeo.com/video/17025742?h=7a3d1c97ab"
                 width="640"
                 height="360"
                 frameborder="0"
