--- a/index.html
+++ b/index.html
@@ -300,11 +300,11 @@
             <div class="howtomade_img">
               <iframe
                 src="https://player.vimeo.com/video/17025742?h=7a3d1c97ab"
-                width="640"
-                height="360"
                 frameborder="0"
-                allow="autoplay; fullscreen; picture-in-picture"
+                allow="autoplay; picture-in-picture"
                 loading="lazy"
+                background-position="conta"
+                style="width: 100%; height: 100%"
               ></iframe>
             </div>
             <div class="howtomade">
