--- a/index.html
+++ b/index.html
@@ -298,14 +298,13 @@
           <h2 class="howtomade_title">HOW IT'S <span class="orange_text">MADE?</span></h2>
           <div class="howtomade_content">
             <div class="howtomade_img">
-              <div style="padding: 56.25% 0 0 0; position: relative">
-                <iframe
-                  src="https://player.vimeo.com/video/679987878?h=9d9971d226&color=ffffff&title=0&byline=0&portrait=0"
-                  style="position: absolute; top: 0; left: 0; width: 100%; height: 100%"
-                  frameborder="0"
-                  allow="autoplay; fullscreen; picture-in-picture"
-                ></iframe>
-              </div>
+              <iframe
+                src="https://player.vimeo.com/video/679987878?h=9d9971d226&color=ffffff&title=0&byline=0&portrait=0"
+                width="711"
+                height="400"
+                frameborder="0"
+                allow="autoplay; fullscreen; picture-in-picture"
+              ></iframe>
             </div>
             <div class="howtomade">
               <h3 class="howtomade_main">
