--- a/index.html
+++ b/index.html
@@ -820,16 +820,15 @@
               title="Please correct phone"
             />
           </div>
-          <label class="buynow-form-label"
-            >Comment
+          <label class="buynow-form-label">
+            Comment
             <textarea
               class="buynow-form-item-text"
               id="buynow-text"
               name="text"
               rows="1"
               placeholder="Enter text"
-            >
-            </textarea>
+            ></textarea>
           </label>
         </form>
         <button class="buynow-button" type="button" aria-label="Submit" id="Submit">Submit</button>
